--- a/bank.html
+++ b/bank.html
@@ -11,13 +11,13 @@
   <script>
     function test() {
       $.ajax({
-        type: 'GET',
-        url: '/bank',
-        contentType: 'application/json',
+        type: "GET",
+        url: "http://54.180.70.143/post/totalRead",
+        contentType: "application/json",
         xhrFields: { withCredentials: true },
         data: JSON.stringify({}),
         success: (data, status, xhr) => {
-          alert('성공');
+          alert("성공");
           console.log(data);
           //console.log(JSON.parse(data.board[6].bankRequirePaper));
           //let abc = JSON.stringify(data.board);
@@ -26,7 +26,7 @@
           //console.log();
         },
         error: function (xhr, status, error) {
-          alert('실패했넹');
+          alert("실패했넹");
         },
       });
     }
